@startuml





/' Objects '/

class Fruit {
	+Fruit(int row, int col, FruitEffect effect)
	+~Fruit()
	-effect : FruitEffect
	+GetCol() : int
	+GetEffect() : int
	+GetRow() : int
	-col : int
	-row : int
}


class MainSDLWindow {
	+MainSDLWindow()
	+~MainSDLWindow()
	-playground : Playground*
	-playgroundGraphics : PlaygroundRenderer*
	-playgroundZone : SDL_Rect
	-scoreZone : SDL_Rect
	-renderer : SDL_Renderer*
	-window : SDL_Window*
	-score : Score*
	-scoreGraphics : ScoreRenderer*
	-mainSnake : Snake*
	-outsideMainLoopFont : TTF_Font*
	-outsideMainLoopSmallFont : TTF_Font*
	-pixelizedFont : TTF_Font*
	-HandleMainLoopEvents() : bool
	-ShowGameOver() : bool
	-WaitForPlayerReady() : bool
	+Init(const char* window_name, int width, int height) : int
	+Run() : void
}


class Playground {
	+Playground(int nbCols, int nbRows, Snake* snake)
	+~Playground()
	+GetFruit() : Fruit*
	-presentFruit : Fruit*
	+GetSnake() : Snake*
	-snake : Snake*
	+GetNbCols() : int
	+GetNbRows() : int
	-nbCols : int
	-nbRows : int
	+SetFruit(Fruit* newFruit) : void
	+SpawnFruit() : void
}


class PlaygroundRenderer {
	+PlaygroundRenderer()
	+~PlaygroundRenderer()
	-playground : Playground*
	-drawZone : SDL_Rect
	-maxDrawZone : SDL_Rect
	-renderer : SDL_Renderer*
	-LoadTexture(const std::string* filename) : SDL_Texture*
	-bgTexture : SDL_Texture*
	-crazySnakeHeadTextures : SDL_Texture*
	-fruitsTextures : SDL_Texture*
	-snakeBodyTextures : SDL_Texture*
	-snakeHeadTextures : SDL_Texture*
	-snakeTailTextures : SDL_Texture*
	-tilesTextures : SDL_Texture*
	-GenerateBackground() : int
	+Init(SDL_Renderer* renderer, SDL_Rect drawZone) : int
	-InitFruitsTextures() : int
	-InitSnakeTextures() : int
	-InitTilesTextures() : int
	-tileSize : int
	+SetPlayground(Playground* playground) : void
	+draw() : void
	-drawBackground() : void
	-drawFruit(Fruit* fruitToDraw) : void
	-drawSnake(Snake* snakeToDraw) : void
	-drawSnakeBodySegment(Segment* segment) : void
	-drawSnakeHead(Segment* segment, bool snakeIsCrazy) : void
	-drawSnakeTail(Segment* segment) : void
}


class Score {
	+Score()
	+~Score()
	-score : double
	+getNumberEaten() : int
	+getScore() : int
	-number_eaten : int
	+update_numb_eaten(int value) : void
	+update_score(double value) : void
}


class ScoreRenderer {
	+ScoreRenderer()
	+~ScoreRenderer()
	-drawZone : SDL_Rect
	-renderer : SDL_Renderer*
	-iconsTextures : SDL_Texture*
	-score : Score*
	-police : TTF_Font*
	+Init(SDL_Renderer* renderer, SDL_Rect drawZone) : int
	-InitIconsTextures() : int
	+SetScore(Score* score) : void
	+draw() : void
}


class Segment {
	+Segment(int row, int col, Direction direction, Segment* next)
	+~Segment()
	-direction : Direction
	+GetNext() : Segment*
	-next : Segment*
	+GetCol() : int
	+GetDirection() : int
	+GetRow() : int
	-col : int
	-row : int
	+SetDirection(Direction newDirection) : void
	+SetNext(Segment* nextSegment) : void
}


class Snake {
	+Snake(int starting_row, int starting_col, Direction starting_direction, int length)
	+~Snake()
	-directionToMove : Direction
	+GetHead() : Segment*
	-head : Segment*
	+Eat(Fruit* fruitToEat, Score* score, int* framerate) : bool
	+IsCrazy() : bool
	+Move(Playground* playground, Score* score, int* framerate) : bool
	-crazy : bool
	+occupiesTile(int row, int col) : bool
	-length : int
	+ChangeDirection(Direction newDirection) : void
	+SetCrazy(bool crazy) : void
}


enum Direction {
	DOWN
	DOWNLEFT
	DOWNRIGHT
	LEFT
	LEFTDOWN
	LEFTUP
	RIGHT
	RIGHTDOWN
	RIGHTUP
	UP
	UPLEFT
	UPRIGHT
}


enum FruitEffect {
	BONUS
	COUNT
	INVERSE
	SHRINK
	SPEEDUP
}





/' Inheritance relationships '/




/' Aggregation relationships '/

.Fruit *-- .FruitEffect


.MainSDLWindow o-- .Playground


.MainSDLWindow o-- .PlaygroundRenderer


.MainSDLWindow o-- .Score


.MainSDLWindow o-- .ScoreRenderer


.MainSDLWindow o-- .Snake


.Playground o-- .Fruit


.Playground o-- .Snake


.PlaygroundRenderer o-- .Playground


.ScoreRenderer o-- .Score


.Segment *-- .Direction


.Segment o-- .Segment


.Snake *-- .Direction


.Snake o-- .Segment






/' Nested objects '/



@enduml

